# cloud-storage-system

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env  load-schema.sh  schema.sql
.sqlx/: query-0567eba85904141afd53e6ca8ff7e26baaf7a16c84e908e5dc420e4a4e650a1a.json  query-0780e230d6e78683178b8921d32cc09a3f2fece4bb268d1b59fc1385a00a594b.json  query-08e4221e1c90950855a031e5cf1c42b93486f81c68efa30f9a78a17355f89e30.json  query-09e450122bded7204ff4604db06b56da81eb0712c9bb2fdd35e161e9e604d776.json  query-0e31e21df65cc9f268b344f6e61dec5de9e7611cdb35c5effabc762baf51cc65.json  query-0fdcf666c12bc924cc57c03ff85919d8cb21f21a0a19662d00aa285f60803f2e.json  query-32c19f8f1e9e39118d5de4dbae426fe70ad2ca3469e81f3d5557b3e754536441.json  query-359eb74d2854c70b122434a01555489dd7faabc451e10c596a44e0831e72f959.json  query-4240bac48200287dce76ceaf30faff79c393b8bc9c1f5fbca62015bf937c859e.json  query-43c1c44422639447e411b980ea175744205beef4dbaae24845eb641a775d7d36.json  query-4416389b4a685bd35320f0fa65e0e3c4068e7af4ae3388d67fcfbf1b5446ec47.json  query-4d4a489d653a65ba83c1267390a9e62ba779ec2072983ad8a141efed69ff5def.json  query-57a3084a94105ff8a25b1335dc4e8ae041743973a3aa38ac3ce71c87914b69f7.json  query-625105fb4f3dece8b8bd1560eef5a647230b0337c8855d96ca432e985bf558b5.json  query-645a449e42021d8d72d48c80ea92b406dd5fa7fc322b8dd1e0c1436ddfd84c09.json  query-67f0414ef8f7ef68256c8fa80752b1daf044db90bcdf63ce54144e427552cfaf.json  query-779c507dfa6d515ed5274cbf19ab723a9560de878aaf005307f6d27ea4f4af7b.json  (+21 more)
project-info/: project-info.md
public/: index.html  (+3 more)
(+101 files in other folders)
